# frugal_analyst

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/commands/: publish-post.md  site-guide.md
.github/workflows/: daily-pipeline.yml  deploy.yml
data/: analyzed_log.json  company_universe.json
pipeline/: generate_snowflake_charts.py  pyproject.toml
pipeline/src/frugal_pipeline/: __init__.py  __main__.py  company_selector.py  main.py  models.py
pipeline/src/frugal_pipeline/analysis/: __init__.py  financials.py  labor_lens.py  macro_context.py  validation.py
pipeline/src/frugal_pipeline/charts/: __init__.py  generator.py
pipeline/src/frugal_pipeline/content/: __init__.py  generator.py  prompt.py
pipeline/src/frugal_pipeline/data_sources/: __init__.py  bls.py  fmp.py  fred.py  sec_edgar.py
pipeline/src/frugal_pipeline/output/: __init__.py  writer.py
site/: astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/public/audio/sync/: 2026-03-15-aapl-op-ed.json
site/scripts/: align-audio.py  record-post.sh  tts-generate.py  tts-post.sh
site/src/: content.config.ts
site/src/components/: AudioPlayer.astro  Disclaimer.astro  Footer.astro  Header.astro  PostCard.astro  SEO.astro
site/src/content/blog/: 2026-03-14-berkshire-hathaway-labor-lens.md  2026-03-15-aapl-op-ed.md  2026-03-16-aapl-analysis.md  (+22 more)
site/src/layouts/: BaseLayout.astro  PostLayout.astro
site/src/pages/: 404.astro  about.astro  index.astro  podcast.xml.ts  rss.xml.ts  tools.astro
site/src/styles/: global.css
tts/: pyproject.toml
(+3 files in other folders)
